--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
+JSServe = "824d6782-a2ef-11e9-3a09-e5662e0c26f9"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatsModels = "3eaba693-59b7-5ba5-a881-562e759f1c8d"
 Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
