--- a/linked/Project.toml
+++ b/linked/Project.toml
@@ -4,6 +4,7 @@ BSplineKit = "093aae92-e908-43d7-9660-e50ee39d5a0a"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 JSServe = "824d6782-a2ef-11e9-3a09-e5662e0c26f9"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MakieCore = "20f20a25-4f0e-4fdf-b5d1-57303727442b"
