added sidemenu, updated to Styles, lots of small fixes

--- a/scripts/Project.toml
+++ b/scripts/Project.toml
@@ -3,6 +3,8 @@ BSplineKit = "093aae92-e908-43d7-9660-e50ee39d5a0a"
 Bonito = "824d6782-a2ef-11e9-3a09-e5662e0c26f8"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 ERPExplorer = "a0936657-5da6-42c1-a2f2-44cfa89f194c"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 PlutoLinks = "0ff47ea0-7a50-410d-8455-4348d5de0420"
 Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
 UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
+WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
