--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Bonito = "824d6782-a2ef-11e9-3a09-e5662e0c26f8"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
+JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MakieCore = "20f20a25-4f0e-4fdf-b5d1-57303727442b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
