--- a/Project.toml
+++ b/Project.toml
@@ -25,6 +25,7 @@ UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
 [compat]
-Test = "1.11.0"
 Colors = "0.12, 0.13"
+DataFrames = "1"
 GeometryBasics = "0.4, 0.5"
+Test = "1.11.0"
