--- a/Project.toml
+++ b/Project.toml
@@ -25,17 +25,18 @@ UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
 [compat]
-Bonito = "4"  
-BSplineKit = "0.17"  
-Colors = "0.12, 0.13"  
-GeometryBasics = "0.4, 0.5"  
-JuliaFormatter = "1"  
-Makie = "0.21"  
-StatsBase = "0.34"  
-StatsModels = "0.7"  
-Test = "1.11"  
-TopoPlots = "0.2"  
-Unfold = "0.7"  
-UnfoldMakie = "0.5"  
-UnfoldSim = "0.3"  
+BSplineKit = "0.17"
+Bonito = "4"
+Colors = "0.12, 0.13"
+GeometryBasics = "0.4, 0.5"
+JuliaFormatter = "1"
+Makie = "0.21"
+Revise = "3"
+StatsBase = "0.34"
+StatsModels = "0.7"
+Test = "1.11"
+TopoPlots = "0.2"
+Unfold = "0.7"
+UnfoldMakie = "0.5"
+UnfoldSim = "0.3"
 WGLMakie = "0.10"
