--- a/Project.toml
+++ b/Project.toml
@@ -30,12 +30,12 @@ BSplineKit = "0.17"
 Colors = "0.12, 0.13"  
 GeometryBasics = "0.4, 0.5"  
 JuliaFormatter = "1"  
-Makie = "0.21"  
+Makie = "0.21, 0.22"  
 StatsBase = "0.34"  
 StatsModels = "0.7"  
 Test = "1.11"  
 TopoPlots = "0.2"  
-Unfold = "0.7"  
+Unfold = "0.7, 0.8"  
 UnfoldMakie = "0.5"  
 UnfoldSim = "0.3"  
 WGLMakie = "0.10"
