--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 BSplineKit = "093aae92-e908-43d7-9660-e50ee39d5a0a"
 Bonito = "824d6782-a2ef-11e9-3a09-e5662e0c26f8"
+ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataFramesMeta = "1313f7d8-7da2-5740-9ea0-a2ca25f37964"
@@ -25,20 +26,21 @@ UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
 [compat]
-Bonito = "4"  
-BSplineKit = "0.17, 0.18"  
-Colors = "0.12, 0.13"  
+BSplineKit = "0.17, 0.18"
+Bonito = "4"
+ColorTypes = "0.12.0"
+Colors = "0.12, 0.13"
 DataFrames = "1"
 DataFramesMeta = "0.15"
-GeometryBasics = "0.4, 0.5"  
-JuliaFormatter = "1"  
+GeometryBasics = "0.4, 0.5"
+JuliaFormatter = "1"
 Makie = "0.21, 0.22"
-MakieCore = "0.9"    
-StatsBase = "0.34"  
-StatsModels = "0.7"  
-Test = "1.11"  
-TopoPlots = "0.2"  
-Unfold = "0.7, 0.8"  
-UnfoldMakie = "0.5"  
-UnfoldSim = "0.4"  
+MakieCore = "0.9"
+StatsBase = "0.34"
+StatsModels = "0.7"
+Test = "1.11"
+TopoPlots = "0.2"
+Unfold = "0.7, 0.8"
+UnfoldMakie = "0.5"
+UnfoldSim = "0.4"
 WGLMakie = "0.10, 0.11"
