--- a/Project.toml
+++ b/Project.toml
@@ -33,7 +33,7 @@ Colors = "0.12, 0.13"
 DataFrames = "1"
 DataFramesMeta = "0.15"
 GeometryBasics = "0.4, 0.5"
-JuliaFormatter = "1"
+JuliaFormatter = "1, 2"
 Makie = "0.21, 0.22"
 MakieCore = "0.9"
 StatsBase = "0.34"
