--- a/Project.toml
+++ b/Project.toml
@@ -26,7 +26,7 @@ UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
 [compat]
-BSplineKit = "0.17, 0.18"
+BSplineKit = "0.17, 0.18, 0.19"
 Bonito = "4"
 ColorTypes = "0.12.0"
 Colors = "0.12, 0.13"
