--- a/scripts/Project.toml
+++ b/scripts/Project.toml
@@ -1,10 +1,12 @@
 [deps]
 BSplineKit = "093aae92-e908-43d7-9660-e50ee39d5a0a"
 Bonito = "824d6782-a2ef-11e9-3a09-e5662e0c26f8"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 ERPExplorer = "a0936657-5da6-42c1-a2f2-44cfa89f194c"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 PlutoLinks = "0ff47ea0-7a50-410d-8455-4348d5de0420"
+PyMNE = "6c5003b2-cbe8-491c-a0d1-70088e6a0fd6"
 TopoPlots = "2bdbdf9c-dbd8-403f-947b-1a4e0dd41a7a"
 Unfold = "181c99d8-e21b-4ff3-b70b-c233eddec679"
 UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
