--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Simon Danisch, Benedikt Ehinger, Vladimir Mikheev"]
 version = "0.1.0"
 
 [deps]
+AlgebraOfGraphics = "cbdf2221-f076-402e-a563-3d30da359d67"
 BSplineKit = "093aae92-e908-43d7-9660-e50ee39d5a0a"
 Bonito = "824d6782-a2ef-11e9-3a09-e5662e0c26f8"
 ColorTypes = "3da002f7-5984-5a60-b8a6-cbb66c0b333f"
@@ -23,6 +24,7 @@ UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
 [compat]
+AlgebraOfGraphics = "0.10, 0.11, 0.12"
 BSplineKit = "0.17, 0.18"
 Bonito = "4"
 ColorTypes = "0.12.0"
@@ -30,12 +32,12 @@ Colors = "0.12, 0.13"
 DataFrames = "1"
 DataFramesMeta = "0.15"
 GeometryBasics = "0.4, 0.5"
-Makie = "0.21, 0.22"
-MakieCore = "0.9"
+Makie = "0.24"
+MakieCore = "0.10"
 StatsBase = "0.34"
 StatsModels = "0.7"
 Test = "1.11"
-TopoPlots = "0.2"
+TopoPlots = "0.3"
 Unfold = "0.7, 0.8"
 UnfoldSim = "0.4"
-WGLMakie = "0.10, 0.11"
+WGLMakie = "0.13"
