--- a/Project.toml
+++ b/Project.toml
@@ -23,19 +23,19 @@ UnfoldSim = "ed8ae6d2-84d3-44c6-ab46-0baf21700804"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
 
 [compat]
-BSplineKit = "0.17, 0.18"
+BSplineKit = "0.17, 0.18, 0.19"
 Bonito = "4"
 ColorTypes = "0.12.0"
 Colors = "0.12, 0.13"
 DataFrames = "1"
 DataFramesMeta = "0.15"
 GeometryBasics = "0.4, 0.5"
-Makie = "0.21, 0.22"
-MakieCore = "0.9"
+Makie = "0.21, 0.22, 0.23, 0.24"
+MakieCore = "0.9, 0.10"
 StatsBase = "0.34"
 StatsModels = "0.7"
 Test = "1.11"
-TopoPlots = "0.2"
+TopoPlots = "0.2, 0.3"
 Unfold = "0.7, 0.8"
-UnfoldSim = "0.4"
-WGLMakie = "0.10, 0.11"
+UnfoldSim = "0.4, 0.5"
+WGLMakie = "0.10, 0.11, 0.12, 0.13"
